--- a/views/review_content.ejs
+++ b/views/review_content.ejs
@@ -36,6 +36,12 @@
                             <span style="color:#20B38E">홈화면</span>
                         </a>
                     </li>
+                     <li class="sub-menu">
+                        <a href="/review" style="color:yellow">
+                            <i class="fa fa-tasks" style="color:yellow"></i>
+                            <span>공지사항</span>
+                        </a>
+                    </li>
                     <li class="sub-menu">
                         <a href="/main" style="color:deeppink;">
                             <i class="fa fa-desktop" style="color:deeppink;"></i>
@@ -52,12 +58,6 @@
                         <a href="/review" style="color:darkseagreen">
                             <i class="fa fa-tasks" style="color:darkseagreen"></i>
                             <span>후기 남기기</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/review" style="color:darkblue">
-                            <i class="fa fa-tasks" style="color:darkblue"></i>
-                            <span>공지사항</span>
                         </a>
                     </li>
                 </ul>
